@@ -1,18 +1,24 @@
 package com.project.euler.feature;
 
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
+import static org.junit.Assert.assertTrue;
+
 import java.math.BigInteger;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Set;
-
 import org.junit.*;
 
+import org.junit.After;
 import static org.junit.Assert.*;
+import org.junit.Before;
+import org.junit.Test;
 
 /**
  * The class <code>FunctionsTest</code> contains tests for the class <code>{@link Functions}</code>.
  *
- * @generatedBy CodePro at 30/12/14 3:41 PM
+ * @generatedBy CodePro at 30/12/14 3:52 PM
  * @author test
  * @version $Revision: 1.0 $
  */
@@ -22,7 +28,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGcdR_1()
@@ -41,7 +47,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGcdR_2()
@@ -60,7 +66,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testAddDigit_1()
@@ -85,7 +91,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testAddDigit_2()
@@ -110,7 +116,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_1()
@@ -128,7 +134,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_2()
@@ -146,7 +152,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testAreDistinctDigits_3()
@@ -164,7 +170,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testConcat_1()
@@ -183,7 +189,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testConcat_2()
@@ -202,7 +208,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testContainPrimeFactor_1()
@@ -220,7 +226,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testContainPrimeFactor_2()
@@ -238,7 +244,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testContainPrimeFactor_3()
@@ -256,7 +262,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountNoOfRelativePrime_1()
@@ -274,7 +280,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountNoOfRelativePrime_2()
@@ -292,7 +298,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountNoOfRelativePrime_3()
@@ -310,7 +316,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountdivisor_1()
@@ -328,7 +334,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountdivisor_2()
@@ -346,7 +352,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testCountdivisor_3()
@@ -364,7 +370,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testDivideNumber_1()
@@ -384,7 +390,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testDivideNumber_2()
@@ -404,7 +410,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testDivideNumber_3()
@@ -424,7 +430,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testDivideNumber_4()
@@ -444,7 +450,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testDivideNumber_5()
@@ -464,7 +470,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFactorial_1()
@@ -482,7 +488,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFactorial_2()
@@ -500,7 +506,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFactorial_3()
@@ -518,7 +524,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestDifference_1()
@@ -550,7 +556,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestDifference_2()
@@ -582,7 +588,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestDifference_3()
@@ -614,7 +620,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestDifference_4()
@@ -646,7 +652,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestDifference_5()
@@ -678,7 +684,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestSquare_1()
@@ -696,7 +702,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestSquare_2()
@@ -714,7 +720,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testFindNearestSquare_3()
@@ -732,7 +738,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGenerate_1()
@@ -752,7 +758,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGenerate_2()
@@ -772,7 +778,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGenerateCircular_1()
@@ -792,7 +798,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGenerateCircular_2()
@@ -812,7 +818,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGenerateCircular_3()
@@ -832,7 +838,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGetCycleLength_1()
@@ -850,7 +856,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGetCycleLength_2()
@@ -868,7 +874,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGreatestCommonFactor_1()
@@ -887,7 +893,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testGreatestCommonFactor_2()
@@ -906,7 +912,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testHasPandigitalProduct_1()
@@ -924,7 +930,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testHasPandigitalProduct_2()
@@ -942,7 +948,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testHasPandigitalProduct_3()
@@ -960,7 +966,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testHasPandigitalProduct_4()
@@ -978,7 +984,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsComposite_1()
@@ -996,7 +1002,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsComposite_2()
@@ -1014,7 +1020,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsComposite_3()
@@ -1032,7 +1038,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_1()
@@ -1052,7 +1058,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_2()
@@ -1072,7 +1078,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_3()
@@ -1092,7 +1098,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_4()
@@ -1112,7 +1118,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_5()
@@ -1132,7 +1138,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsConjecture_6()
@@ -1152,12 +1158,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_1()
 		throws Exception {
-		Integer number = new Integer(1);
+		Integer number = Integer.valueOf(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
@@ -1170,12 +1176,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_2()
 		throws Exception {
-		Integer number = new Integer(1);
+		Integer number = Integer.valueOf(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
@@ -1188,12 +1194,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsDoubleBasePalindrome_3()
 		throws Exception {
-		Integer number = new Integer(1);
+		Integer number = Integer.valueOf(1);
 
 		boolean result = Functions.isDoubleBasePalindrome(number);
 
@@ -1206,7 +1212,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsLychrel_1()
@@ -1224,7 +1230,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsLychrel_2()
@@ -1242,7 +1248,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsLychrel_3()
@@ -1260,7 +1266,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_1()
@@ -1278,7 +1284,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_2()
@@ -1296,7 +1302,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsNumberContainEven_3()
@@ -1314,7 +1320,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPalindrome_1()
@@ -1332,7 +1338,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPalindrome_2()
@@ -1350,7 +1356,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPalindrome_3()
@@ -1370,7 +1376,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPalindrome_4()
@@ -1390,7 +1396,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPandigital_1()
@@ -1408,7 +1414,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPandigital_2()
@@ -1426,7 +1432,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPandigital_3()
@@ -1444,7 +1450,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPandigital_4()
@@ -1463,7 +1469,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPandigital_5()
@@ -1482,7 +1488,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPentagonal_1()
@@ -1500,7 +1506,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPentagonal_2()
@@ -1518,7 +1524,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPrime_1()
@@ -1536,7 +1542,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPrime_2()
@@ -1554,7 +1560,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPrime_3()
@@ -1572,7 +1578,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPrime_4()
@@ -1590,7 +1596,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testIsPrime_5()
@@ -1604,16 +1610,70 @@ public class FunctionsTest {
 	}
 
 	/**
+	 * Run the boolean isPrimeBrute(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
+	 */
+	@Test
+	public void testIsPrimeBrute_1()
+		throws Exception {
+		int num = 1;
+
+		boolean result = Functions.isPrimeBrute(num);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isPrimeBrute(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
+	 */
+	@Test
+	public void testIsPrimeBrute_2()
+		throws Exception {
+		int num = 1;
+
+		boolean result = Functions.isPrimeBrute(num);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
+	 * Run the boolean isPrimeBrute(int) method test.
+	 *
+	 * @throws Exception
+	 *
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
+	 */
+	@Test
+	public void testIsPrimeBrute_3()
+		throws Exception {
+		int num = 1;
+
+		boolean result = Functions.isPrimeBrute(num);
+
+		// add additional test code here
+		assertEquals(true, result);
+	}
+
+	/**
 	 * Run the String join(List<?>,String) method test.
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testJoin_1()
 		throws Exception {
-		List<Object> list = new LinkedList<Object>();
+		List<Object> list = new LinkedList();
 		String delim = "";
 
 		String result = Functions.join(list, delim);
@@ -1627,12 +1687,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testJoin_2()
 		throws Exception {
-		List<Object> list = new LinkedList<Object>();
+		List<Object> list = new LinkedList();
 		String delim = "";
 
 		String result = Functions.join(list, delim);
@@ -1646,12 +1706,12 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testJoin_3()
 		throws Exception {
-		List<Object> list = new LinkedList<Object>();
+		List<Object> list = new LinkedList();
 		String delim = "";
 
 		String result = Functions.join(list, delim);
@@ -1665,7 +1725,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testMakePandigital_1()
@@ -1683,7 +1743,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testMakePandigital_2()
@@ -1701,7 +1761,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testMakePandigital_3()
@@ -1719,7 +1779,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testMakePandigital_4()
@@ -1737,7 +1797,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testReverse_1()
@@ -1755,7 +1815,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testReverse_2()
@@ -1773,7 +1833,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSmallestFactor_1()
@@ -1791,7 +1851,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSmallestFactor_2()
@@ -1809,7 +1869,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSmallestFactor_3()
@@ -1827,7 +1887,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSumofdivisor_1()
@@ -1845,7 +1905,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSumofdivisor_2()
@@ -1863,7 +1923,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSumofdivisor_3()
@@ -1881,7 +1941,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSumofdivisor_4()
@@ -1899,7 +1959,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testSumofdivisor_5()
@@ -1917,7 +1977,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testValidateQuadric_1()
@@ -1936,7 +1996,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testValidateQuadric_2()
@@ -1955,7 +2015,7 @@ public class FunctionsTest {
 	 *
 	 * @throws Exception
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Test
 	public void testValidateQuadric_3()
@@ -1975,7 +2035,7 @@ public class FunctionsTest {
 	 * @throws Exception
 	 *         if the initialization fails for some reason
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@Before
 	public void setUp()
@@ -1989,7 +2049,7 @@ public class FunctionsTest {
 	 * @throws Exception
 	 *         if the clean-up fails for some reason
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	@After
 	public void tearDown()
@@ -2002,7 +2062,7 @@ public class FunctionsTest {
 	 *
 	 * @param args the command line arguments
 	 *
-	 * @generatedBy CodePro at 30/12/14 3:41 PM
+	 * @generatedBy CodePro at 30/12/14 3:52 PM
 	 */
 	public static void main(String[] args) {
 		new org.junit.runner.JUnitCore().run(FunctionsTest.class);
